# SGM-VFI

./: .gitignore  pyproject.toml
src/sgmvfi/: Trainer_base.py  Trainer_x4k.py  config.py  config_base.py  demo_2x.py  train_base.py  train_x4k.py
src/sgmvfi/model/: utils.py
